--- a/style.css
+++ b/style.css
@@ -211,3 +211,50 @@ button:focus {
     top: -7px;
     left: -2px
 } 
+
+/* For Login page */
+.login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.login--form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 50%;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    padding: 2rem;
+}
+
+.login--form > h1{
+    font-size: 2rem;
+    font-weight: 100;
+    margin-bottom: 1rem;
+}
+
+.login--form > input{
+    width: 100%;
+    height: 2rem;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+}
+
+.login--form > button{
+    width: 100%;
+    height: 2rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #4A4E74;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+}
